# projext-one

./: GITHUB_RELEASES_SETUP.md  README.md  RELEASE_NOTES.md  generate-signatures.sh  latest.json  next.config.ts  package.json  setup-rag.ps1  setup-updates.ps1  setup-updates.sh
.github/workflows/: release.yml
app/: PluginIcon.tsx  analytics.tsx  chrome-sites.tsx  globals.css  layout.tsx  page.tsx
app/ai-analyzer/: page.tsx
app/app-discovery/: page.tsx
app/app-icon-test/: page.tsx
app/app-monitor/: page.tsx
app/app-usage/: page.tsx
app/audio-files/: page.tsx
app/chat/: page.tsx
app/chrom-site/: page.tsx
app/coming-soon/: page.tsx
app/components/: AIDataAnalyzer.tsx  AccessibilityIcon.tsx  AgentSelector.tsx  (+20 more)
components/: AIChatDrawer.tsx  AIChatDrawerExample.tsx  AIChatDrawerTrigger.tsx  AIChatDrawerUsage.tsx  AppMonitorAlert.tsx  ComingSoonRedirect.tsx  CustomDropdown.tsx  GemmaModelStatus.tsx  InstallProgress.tsx  ModelSelector.tsx  SystemCheckProgress.tsx  SystemStatus.tsx  SystemStatusFloatingTag.tsx  UpdateHandler.tsx  sql-autocomplete-input.tsx
contexts/: AIChatContext.tsx
hooks/: use-ai-chat-drawer.ts  use-app-discovery.ts  use-app-monitor-storage.ts  use-app-monitor.ts  use-audio-file.ts  use-deep-analytics.ts  use-install-ollama-model.ts  use-install-ollama.ts  use-install-screenpipe.ts  use-local-storage.ts  use-ollama-models-example.tsx  use-ollama-models.ts  use-sql-autocomplete.ts  use-sql-fetch-ocr-details.ts  use-sql-fetch-sites.ts  use-system-check.ts
lib/: types.ts  utils.ts
src-tauri/: Cargo.toml  selected_model.txt  tauri.conf.json
src-tauri/src/: ai.rs  app_discovery.rs  export.rs  icons.rs  install.rs  main.rs  rag.rs  screenpipe.rs  system.rs  types.rs
(+17 files in other folders)
